fixed left align issue on firefox and safari and attempting to fix loading problems
added "display; grid" to rules using "justify-items" + using 30fps hero vid instead of 60fps

--- a/css/game-page.css
+++ b/css/game-page.css
@@ -121,6 +121,7 @@ h1 {
 }
 
 main {
+    display: grid;
     justify-items: center;
 }
 
