--- a/css/styles.css
+++ b/css/styles.css
@@ -289,6 +289,7 @@ main {
 }
 
 section {
+    display: grid;
     justify-items: center;
     width: 100%;
     padding-top: 1rem;
